--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Story &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>LSGO在线发布</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -52,12 +52,15 @@
 			<div class="overlay"></div>
 			<nav role="navigation">
 				<ul>
-					<li><a href="index.html"><i class="icon-home"></i></a></li>
+					<li>蓝贵才&nbsp;&nbsp;&nbsp;#####</li>
+				</ul>
+				<ul>
+					<li>蓝贵才&nbsp;&nbsp;&nbsp;#####</li>
 				</ul>
 			</nav>
 			<div class="featured">
-				<span>Bio</span>
-				<h2>I'm John Doe </a></h2>
+				<span>LSGO</span>
+				<h2>参加学习成员信息</h2>
 			</div>
 		</div>
 
@@ -65,153 +68,20 @@
 		<!--右边滚动信息发布-->
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
+
 				<div class="fh5co-entry padding">
-					<img src="images/project-1.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/project-1.jpg">
 					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
+						<span class="fh5co-post-date">2017-12-12</span>
+						<h2><a href="single.html">字符串操作</a></h2>
 						<p>How two simple exercises changed my life</p>
 					</div>
 				</div>
 
-				<div class="fh5co-entry padding">
-					<img src="images/project-2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
 
-				<div class="fh5co-entry padding">
-					<img src="images/project-3.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-4.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-7.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-8.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-1.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-                <div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-3.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-4.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-7.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-
-				<div class="fh5co-entry padding">
-					<img src="images/project-8.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
-					</div>
-				</div>
-				<footer>
-					<div>
-					&copy; 2016 Free HTML5. All Rights Reserved. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+				<footer class="navbar-fixed-bottom">
+					<div class="text-center">
+					&copy; 2017 LSGO All Rights Reserved. 学习信息发布平台
 					</div>
 				</footer>
 			</div>
