--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
 
-	
+
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -23,14 +23,14 @@
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -43,13 +43,10 @@
 
 	</head>
 	<body>
-		
-	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 		<!--左边定位-->
-		<div id="fh5co-aside" style="background-image: url(images/image_1.jpg)">
-			<div class="overlay"></div>
+		<div id="fh5co-aside" style="background-color: : #fff">
 			<nav role="navigation">
 				<ul>
 					<li>蓝贵才&nbsp;&nbsp;&nbsp;#####</li>
@@ -59,22 +56,22 @@
 				</ul>
 			</nav>
 			<div class="featured">
-				<span>LSGO</span>
-				<h2>参加学习成员信息</h2>
+				<span style="color: #000">LSGO</span>
+				<h2 style="color: #000">参加学习成员信息</h2>
 			</div>
 		</div>
 
-		
+
 		<!--右边滚动信息发布-->
 		<div id="fh5co-main-content">
-			<div class="fh5co-post"> 
+			<div class="fh5co-post">
 
 				<div class="fh5co-entry padding">
-					<img src="images/project-1.jpg">
+					<img src="images/image_1.jpg">
 					<div>
 						<span class="fh5co-post-date">2017-12-12</span>
 						<h2><a href="single.html">字符串操作</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<p>使用C#和Python实现</p>
 					</div>
 				</div>
 
@@ -91,7 +88,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
