--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	<div id="page">
 		<!--左边定位-->
-		<div id="fh5co-aside" style="background-color: : #fff">
+		<div id="fh5co-aside" style="background-color:#fff">
 			<nav role="navigation">
 				<ul>
 					<li>蓝贵才&nbsp;&nbsp;&nbsp;#####</li>
