--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>LSGO在线发布</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
+	/>
 	<meta name="author" content="freehtml5.co" />
 
 
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -41,26 +43,38 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<div id="page">
+		<div></div>
 		<!--左边定位-->
 		<div id="fh5co-aside" style="background-color:#fff">
 			<nav role="navigation">
-				<ul>
-					<li>蓝贵才&nbsp;&nbsp;&nbsp;#####</li>
-				</ul>
-				<ul>
-					<li>蓝贵才&nbsp;&nbsp;&nbsp;#####</li>
-				</ul>
+				<table>
+					<tr>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+					</tr>
+					<tr>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+					</tr>
+					<tr>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+						<td>蓝贵才&nbsp;&nbsp;&nbsp;#####</td>
+					</tr>
+				</table>
 			</nav>
 			<div class="featured">
 				<span style="color: #000">LSGO</span>
 				<h2 style="color: #000">参加学习成员信息</h2>
 			</div>
 		</div>
-
 
 		<!--右边滚动信息发布-->
 		<div id="fh5co-main-content">
@@ -70,15 +84,15 @@
 					<img src="images/image_1.jpg">
 					<div>
 						<span class="fh5co-post-date">2017-12-12</span>
-						<h2><a href="single.html">字符串操作</a></h2>
+						<h2>
+							<a href="single.html">字符串操作</a>
+						</h2>
 						<p>使用C#和Python实现</p>
 					</div>
 				</div>
-
-
 				<footer class="navbar-fixed-bottom">
 					<div class="text-center">
-					&copy; 2017 LSGO All Rights Reserved. 学习信息发布平台
+						&copy; 2017 LSGO All Rights Reserved. 学习信息发布平台
 					</div>
 				</footer>
 			</div>
@@ -86,7 +100,9 @@
 	</div>
 
 	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+		<a href="#" class="js-gotop">
+			<i class="icon-arrow-up"></i>
+		</a>
 	</div>
 
 	<!-- jQuery -->
@@ -102,6 +118,6 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
