--- a/detail/2017121201.html
+++ b/detail/2017121201.html
@@ -26,17 +26,17 @@
     <section>
       <div class="container">
         <div class="docs-content">
-          <h3 id="welcome"> Welcome</h3>
-          <p> Are you listening to your customers?</p>
-
-          <p> As they say: You cannot improve what you cannot measure; but the paradox is you cannot measure everything – happiness,
-            hatred, anger… but you can measure customer satisfaction. Yes, you can measure customer satisfaction by analyzing
-            likes and dislikes of your customers. You can gauge popularity of your website or products. You can also:</p>
+          <h3 id="welcome"> 主要内容</h3>
+          <p>本次学习的主要内容：</p>
           <ul>
-            <li>See how many visitors like the new design of your website or logo</li>
-            <li>Analyze what your readers want to see on your blog</li>
-            <li>Understand how helpful the content on your support forum or website is</li>
-            <li>Know the latest trends and user’s opinion before launching a new product or service</li>
+            <li>C#以及Python的文件读取操作</li>
+            <li>正则表达式
+              <ul>
+                <li>文本匹配</li>
+              </ul>
+            </li>
+            <li>词语匹配</li>
+            <li>词频统计</li>
           </ul>
           <p> Opineo allows you to do all of this and much more without signing up for an account or hire an expert. This DIY
             tool enables you to listen to your customers’ voice easily and instantly. All you have to do is go online, design
@@ -61,15 +61,9 @@
             <li>Detailed View</li>
           </ul>
 
-          <pre class="prettyprint">&lt;script&gt;
-      	$(document).ready(function (){
-        $('#DefaultOptions').opineo('results.php', {curvalue:3,
-            view: 'detailed',
-            animation_speed: 'super',
-            show_total_votes_counter: false,
-            show_overall_rating: true});
-         })
-      &lt;/script&gt;</pre>
+          <pre class="prettyprint">
+            
+          </pre>
         </div>
     </section>
 
