--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="col-md-3 text-right">
         <div class="adress-category">Address</div>
         <div class="adress-content">
-          <label>Lorem ipsum dolor sit</label>
-          <label>Dolor sit amet</label>
+          <label>华北电力大学(二校区)--保定</label>
+          <label>教十一D406</label>
         </div>
       </div>
     </div>
@@ -34,30 +34,15 @@
             <span class="label label-info margin">new</span>
           </h2>
           <p>时间：2017-12-12</p>
+          <p>难度系数：&#9733&#9733&#9733&#9733</p>
           <p>
             It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
             The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-            'Content here, content here', making it look like readable English. Many desktop publishing packages and web
-            page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many
-            web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes
-            on purpose (injected humour and the like).
-          </p>
-          <a href="#" target="_blank">查看详情</a>
+          <p><a href="detail/2017121201.html" target="_blank">查看详情</a></p>      
         </div>
 
 
-
         <div class="row box red">
-          <!-- <h2>Skills</h2>
-              <ul class="lst-skills">
-              	<li><label>Adobe Photoshop</label></li>
-                <li><label>Adobe Illustrat</label></li>
-                <li><label>Adobe Indesign</label></li>
-                <li><label>Adobe Dreamweaver</label></li>
-                <li><label>Adobe Flash</label></li>
-                <li><label>HTML & CSS</label></li>
-                <li><label>AVID Media Composer</label></li>
-            </ul> -->
           <h2>Python字符串操作
             <span class="label label-info margin">new</span>
           </h2>
