--- a/index.html
+++ b/index.html
@@ -30,32 +30,27 @@
     <div class="row personal-data">
       <div class=" col-lg-6 col-md-6 col-xs-12">
         <div class="row box  green">
-          <h2>Python字符串操作
+          <h2>机器学习任务一：关于癌症的预测问题
             <span class="label label-info margin">new</span>
           </h2>
-          <p>时间：2017-12-12</p>
-          <p>难度系数：&#9733&#9733&#9733&#9733</p>
+          <p>时间：2017-12-13</p>
+          <p>任务系数：&#9733&#9733&#9733&#9733</p>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-          <p><a href="detail/2017121201.html" target="_blank">查看详情</a></p>      
+            学习Python机器学习相关知识，通过数据集训练预测癌症
+          <p><a href="detail/2017121301.html" target="_blank">查看详情</a></p>      
         </div>
 
 
         <div class="row box red">
-          <h2>Python字符串操作
+          <h2>机器学习任务二：输出文章对应主题
             <span class="label label-info margin">new</span>
           </h2>
-          <p>时间：2017-12-12</p>
+          <p>时间：2017-12-13</p>
+          <p>任务系数：&#9733&#9733&#9733&#9733&#9733</p>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-            'Content here, content here', making it look like readable English. Many desktop publishing packages and web
-            page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many
-            web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes
-            on purpose (injected humour and the like).
+              利用LDA算法对文章进行训练，输出每篇文章对应的主题
           </p>
-          <a href="detail/2017121201.html" target="_blank">查看详情</a>
+          <a href="detail/2017121302.html" target="_blank">查看详情</a>
         </div>
 
 
