--- a/detail/2017121301.html
+++ b/detail/2017121301.html
@@ -57,6 +57,7 @@
             <li>最后一列为类别标签，1表示没得癌症，-1表示得了癌症</li>
             <li>其他列均为特征。</li>
           </ul>
+          <h2>不会做？<a href="https://www.baidu.com/" target="_blank">点我</a></h2>
         </div>
     </section>
 
