--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="row box  green">
           <h2>机器学习任务一：关于癌症的预测问题
             <span class="label label-info margin">new</span>
+            <span class="label label-info">Python</span>
           </h2>
           <p>时间：2017-12-13</p>
           <p>任务系数：&#9733&#9733&#9733&#9733</p>
@@ -44,6 +45,7 @@
         <div class="row box red">
           <h2>机器学习任务二：输出文章对应主题
             <span class="label label-info margin">new</span>
+            <span class="label label-info">Python</span>
           </h2>
           <p>时间：2017-12-13</p>
           <p>任务系数：&#9733&#9733&#9733&#9733&#9733</p>
@@ -55,8 +57,9 @@
 
 
         <div class="row box cloud">
-          <h2>Python字符串操作
+          <h2>字符串操作
             <span class="label label-info margin">new</span>
+            <span class="label label-info">C# & Python</span>
           </h2>
           <p>时间：2017-12-12</p>
           <p>
