--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 
     <div class="row personal-data">
       <div class=" col-lg-6 col-md-6 col-xs-12">
+
+        <div class="row box cloud">
+          <h2>编程语言任务一：字符串操作
+            <span class="label label-info margin">new</span>
+            <span class="label label-info">C# & Python</span>
+          </h2>
+          <p>时间：2017-12-14</p>
+          <p>任务系数：&#9733&#9733&#9733</p>
+          <p>字符串操作是程序开发中绕不过的一块蛋糕。此次任务就是学习两种编程语言下的字符串操作。
+            需要大概学习了解的字符匹配表达式有两种。第一个是正则表达式，几乎可以完成99%的字符匹配。第二种是
+            xpath表达式，专门针对类似于网页HTML文档的匹配，网络爬虫必备
+          </p>
+          <a href="detail/2017121401.html" target="_blank">查看详情</a>
+        </div>
+
         <div class="row box  green">
           <h2>机器学习任务一：关于癌症的预测问题
             <span class="label label-info margin">new</span>
@@ -38,7 +53,9 @@
           <p>任务系数：&#9733&#9733&#9733&#9733</p>
           <p>
             学习Python机器学习相关知识，通过数据集训练预测癌症
-          <p><a href="detail/2017121301.html" target="_blank">查看详情</a></p>      
+            <p>
+              <a href="detail/2017121301.html" target="_blank">查看详情</a>
+            </p>
         </div>
 
 
@@ -50,27 +67,9 @@
           <p>时间：2017-12-13</p>
           <p>任务系数：&#9733&#9733&#9733&#9733&#9733</p>
           <p>
-              利用LDA算法对文章进行训练，输出每篇文章对应的主题
+            利用LDA算法对文章进行训练，输出每篇文章对应的主题
           </p>
           <a href="detail/2017121302.html" target="_blank">查看详情</a>
-        </div>
-
-
-        <div class="row box cloud">
-          <h2>字符串操作
-            <span class="label label-info margin">new</span>
-            <span class="label label-info">C# & Python</span>
-          </h2>
-          <p>时间：2017-12-12</p>
-          <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-            'Content here, content here', making it look like readable English. Many desktop publishing packages and web
-            page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many
-            web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes
-            on purpose (injected humour and the like).
-          </p>
-          <a href="#" target="_blank">查看详情</a>
         </div>
       </div>
 
