--- a/index.html
+++ b/index.html
@@ -30,22 +30,32 @@
     <div class="row personal-data">
       <div class=" col-lg-6 col-md-6 col-xs-12">
 
+        <div class="row box moccasin">
+          <h2>编程语言任务：字符串进阶：爬虫
+            <span class="label label-info margin">new</span>
+            <span class="label label-info">C# & Python</span>
+          </h2>
+          <p>时间：2017-12-14</p>
+          <p>任务系数：&#9733&#9733&#9733&#9733</p>
+          <p>字符串操作是程序开发中绕不过的一块蛋糕。爬虫也是非常热门。这次任务就是使用get请求获取一个网页信息，然后进行匹配
+          </p>
+          <a href="javascript:void(0)" target="_blank">查看详情</a>
+        </div>
+
         <div class="row box cloud">
-          <h2>编程语言任务一：字符串操作
+          <h2>编程语言任务：字符串操作
             <span class="label label-info margin">new</span>
             <span class="label label-info">C# & Python</span>
           </h2>
           <p>时间：2017-12-14</p>
           <p>任务系数：&#9733&#9733&#9733</p>
-          <p>字符串操作是程序开发中绕不过的一块蛋糕。此次任务就是学习两种编程语言下的字符串操作。
-            需要大概学习了解的字符匹配表达式有两种。第一个是正则表达式，几乎可以完成99%的字符匹配。第二种是
-            xpath表达式，专门针对类似于网页HTML文档的匹配，网络爬虫必备
+          <p>字符串操作是程序开发中绕不过的一块蛋糕。此次任务就是学习两种编程语言下的字符串操作。 需要大概学习了解的字符匹配表达式有两种。第一个是正则表达式，几乎可以完成99%的字符匹配。第二种是 xpath表达式，专门针对类似于网页HTML文档的匹配，网络爬虫必备
           </p>
           <a href="detail/2017121401.html" target="_blank">查看详情</a>
         </div>
 
         <div class="row box  green">
-          <h2>机器学习任务一：关于癌症的预测问题
+          <h2>机器学习任务：关于癌症的预测问题
             <span class="label label-info margin">new</span>
             <span class="label label-info">Python</span>
           </h2>
@@ -60,7 +70,7 @@
 
 
         <div class="row box red">
-          <h2>机器学习任务二：输出文章对应主题
+          <h2>机器学习任务：输出文章对应主题
             <span class="label label-info margin">new</span>
             <span class="label label-info">Python</span>
           </h2>
