--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p>任务系数：&#9733&#9733&#9733&#9733</p>
           <p>字符串操作是程序开发中绕不过的一块蛋糕。爬虫也是非常热门。这次任务就是使用get请求获取一个网页信息，然后进行匹配
           </p>
-          <a href="javascript:void(0)" target="_blank">查看详情</a>
+          <a href="detail/2017121402.html" target="_blank">查看详情</a>
         </div>
 
         <div class="row box cloud">
