--- a/detail/2017121402.html
+++ b/detail/2017121402.html
@@ -7,7 +7,7 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>2017-12-14-01</title>
+  <title>2017-12-14-02</title>
   <link rel="alternate" type="application/rss+xml" title="" href="feed/index.html">
   <link href="http://fonts.googleapis.com/css?family=Raleway:700,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
   <div class="wrapper">
     <header>
       <div class="container">
-        <h2 class="lone-header">字符串操作 C# & Python</h2>
+        <h2 class="lone-header">字符串操作升级：爬虫 C# & Python</h2>
       </div>
     </header>
 
@@ -29,7 +29,7 @@
           <h3 id="welcome"> 主要内容</h3>
           <p>任务要求：</p>
           <p>
-            <h4>学习字符串以及文件操作，完成特定文件读取，写入，运用表达式进行匹配
+            <h4>学习网络请求，并且通过字符串匹配（可以使用正则表达式和xpath以及其他文本匹配包）
             </h4>
           </p>
           <p>
@@ -40,46 +40,63 @@
 
           <h3 id="view_type">1.此次学习主要内容</h3>
           <ul>
-              <li>文件的读取和写入（这里Python在windows上也许会存在编码的问题）</li>
-              <li>字符串的操作，给定一串字符串，在一个txt文档中，读取字符串以后，使用正则表达式进行匹配</li>
-              <li>在匹配到的文本中进行简单的词频统计</li>
-              <li>喜欢爬虫的同学可以看看xpath，个人兴趣不做要求</li>
+              <li>Python以及C#的网络请求模块</li>
+              <li>通过网络请求得到网页文本信息</li>
+              <li>通过表达式匹配出一些信息（比如文本）</li>
               <li>C#的同学有兴趣还可以写成窗体。窗体可以用winform，也可以用WPF以及UWP等</li>
           </ul>
 
           <h3 id="view_type">2.一些提示</h3>
-         <ul>
-             <li>文件读取就没什么说的了，比较简单</li>
-             <li>正则表达式在C#和Python中都有相应的模块，我们只需要写好表达式，学会去使用就行</li>
-             <li>文本匹配有很多算法，有兴趣的同学可以研究。最简单的有暴力匹配，百度上有很多介绍（其实两个循环就完了）</li>
-         </ul>
-         <h3 id="view_type">3.数据说明以及匹配要求</h3>
-         <ul>
-             <li>数据截取的是新浪新闻关于公祭日的
-                 <a href="http://news.sina.com.cn/gov/xlxw/2017-12-14/doc-ifypsqiz6677928.shtml">新闻</a>
-                （新闻源代码已经在百度云给出）
-                </li>
-             <li>使用正则表达式匹配出新闻标题（h1标签内），时间（2017年12月14日 10:21），以及新闻内容（p标签内就行）</li>
-             <pre class="prettyprint">
-                 比如时间的匹配正则表达式为：\d{4}年\d{1,2}月\d{1,2}日\d{2}:\d{2}
-             </pre>
-             <li>对匹配到的新闻信息进行词频统计，需要统计的词语为
-                 <ul>
-                     <li>公祭</li>
-                     <li>中国共产党</li>
-                     <li>抗日</li>
-                 </ul>
-             </li>
-             <li>将匹配出来的新闻以及词频写到新txt文件中</li>
-         </ul>
-          <h3>4.数据集</h3>
-          <p>数据请见百度云网盘：<a href="https://pan.baidu.com/s/1eStTIzo" target="_blank">文本</a></p>
-          <h2>不会做？<a href="https://www.baidu.com/" target="_blank">点我</a></h2>
+          <p>C#网页请求：</p>
+          <pre class="prettyprint">
+            using System.Web;//需要添加这个引用
+            //网页请求，需要声明一个CookieContainer变量记录cookie
+            private string GetResultHtml(string url, CookieContainer cookie, string refer)
+            {
+                var html = "";
+                var webRequest = WebRequest.Create(url) as HttpWebRequest;
+                webRequest.Method = "GET";
+                webRequest.CookieContainer = cookie;
+                webRequest.Referer = refer;
+                webRequest.Timeout = 20000;
+                webRequest.Headers.Add("X-Requested-With:XMLHttpRequest");
+                webRequest.Accept = "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8";
+                webRequest.UserAgent = " Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.0)";
+                using (var webResponse = (HttpWebResponse)webRequest.GetResponse())
+                {
+                    using (var reader = new StreamReader(webResponse.GetResponseStream(), Encoding.UTF8))
+                    {
+    
+                        html = reader.ReadToEnd();
+                        reader.Close();
+                        webResponse.Close();
+                    }
+                }
+                return html;
+            }
+          </pre>
+          <p>C#正则表达式</p>
+          <pre class="prettyprint">
+            using System.Text.RegularExpressions;//需要添加这个引用
+            Regex re = new Regex(@"var game=Array(.*)[^(var)]");
+            string asd = re.Match(BaseResultHtml).ToString();
+          </pre>
+          <p>Python网络请求</p>
+          <pre class="prettyprint">
+            from urllib import request
+            html=request.urlopen('url').read()
+          </pre>
+          <p>Python使用正则表达式</p>
+          <pre class="prettyprint">
+            import re
+            text=re.findall('表达式')
+          </pre>
+          <p>除了正则表达式，还有xpath可用</p>
         </div>
     </section>
 
     <footer>
-      <div class="">
+      <div>
         <p> &copy;LSGO学习信息发布平台</p>
       </div>
     </footer>
