--- a/detail/2017121402.html
+++ b/detail/2017121402.html
@@ -32,6 +32,7 @@
             <h4>学习网络请求，并且通过字符串匹配（可以使用正则表达式和xpath以及其他文本匹配包）
             </h4>
           </p>
+          <p>本次网址为<a href="http://sjz.58.com/chuzu/?PGTID=0d100000-000f-1ffa-6127-cf515cf7a53e&ClickID=1">http://sjz.58.com/chuzu/?PGTID=0d100000-000f-1ffa-6127-cf515cf7a53e&ClickID=1</a></p>
           <p>
                 提示：
                 <a href="http://www.runoob.com/regexp/regexp-syntax.html" target="_blank">正则表达式点这里</a>
