--- a/detail/2017121402.html
+++ b/detail/2017121402.html
@@ -33,6 +33,7 @@
             </h4>
           </p>
           <p>本次网址为<a href="http://sjz.58.com/chuzu/?PGTID=0d100000-000f-1ffa-6127-cf515cf7a53e&ClickID=1">http://sjz.58.com/chuzu/?PGTID=0d100000-000f-1ffa-6127-cf515cf7a53e&ClickID=1</a></p>
+          <p>需要匹配的内容为房租标题信息，以及价格</p>
           <p>
                 提示：
                 <a href="http://www.runoob.com/regexp/regexp-syntax.html" target="_blank">正则表达式点这里</a>
