--- a/detail/2017121402.html
+++ b/detail/2017121402.html
@@ -39,6 +39,7 @@
                 <a href="http://www.runoob.com/regexp/regexp-syntax.html" target="_blank">正则表达式点这里</a>
                 <a href="http://www.runoob.com/xpath/xpath-tutorial.html" target="_blank">xpath表达式点这里</a>
           </p>
+          <p>可以通过浏览器的开发人员工具，查看网页源码（F12进入或者右键网页  选择‘检查’）Element就是网页源代码结构</p>
 
           <h3 id="view_type">1.此次学习主要内容</h3>
           <ul>
