添加汇报资料下载，删除js引用

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
       <!--右边-->
       <div class="col-lg-5 col-md-5 col-xs-11 ML">
-        <div class="row border-box ">
+        <a href="https://pan.baidu.com/s/1slds5y9" target="_blank" class="h2"><span class="label label-success">汇报资料下载</span></a>
+
+        <div class="row border-box margin-top">
           <h2>成员信息公开</h2>
           <table class="table">
             <tr>
@@ -119,9 +121,6 @@
       </div>
     </div>
   </div>
-  <script src="js/jquery-1.10.2.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/dropdown.js"></script>
 </body>
 
 </html>
