添加人员名单

--- a/index.html
+++ b/index.html
@@ -87,21 +87,106 @@
       <!--右边-->
       <div class="col-lg-5 col-md-5 col-xs-11 ML">
         <a href="https://pan.baidu.com/s/1slds5y9" target="_blank" class="h2"><span class="label label-success">汇报资料下载</span></a>
-
+        <span class="margin">每周源代码可以发到邮箱：gui_052@163.com</span>
         <div class="row border-box margin-top">
           <h2>成员信息公开</h2>
           <table class="table">
             <tr>
               <td>姓名</td>
+              <td>系</td>
               <td>信息</td>
               <td>分数</td>
             </tr>
             <tr>
-              <td>蓝贵才</td>
-              <td>
-
-              </td>
-              <td>10</td>
+              <td>高泽阳</td>
+              <td>能动</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>古珊珊</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>张凤山</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>尧甜</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>姚宇</td>
+              <td>电创</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>焦冰洁</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>余江银</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>潘睿</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>黄秉伟</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>何长城</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>李金原</td>
+              <td>计算机</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>马力</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>李浩珲</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>史云雷</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
             </tr>
           </table>
         </div>
