--- a/index.html
+++ b/index.html
@@ -181,7 +181,12 @@
               <td></td>
               <td>0</td>
             </tr>
-            
+            <tr>
+              <td>庄新宇</td>
+              <td>电创</td>
+              <td></td>
+              <td>0</td>
+            </tr>
             <tr>
               <td></td>
               <td></td>
