--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
               <td>0</td>
             </tr>
             <tr>
+              <td>赵建军</td>
+              <td>计算机</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
               <td></td>
               <td></td>
               <td></td>
