--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
               <td>0</td>
             </tr>
             <tr>
+              <td>严涛</td>
+              <td>计算机</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
               <td></td>
               <td></td>
               <td></td>
