--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
               <td>0</td>
             </tr>
             <tr>
+              <td>卢志军</td>
+              <td>数理</td>
+              <td></td>
+              <td>0</td>
+            </tr>
+            <tr>
               <td></td>
               <td></td>
               <td></td>
