--- a/index.html
+++ b/index.html
@@ -150,6 +150,18 @@
               <td style="color: red">4</td>
             </tr>
             <tr>
+              <td>张凤山</td>
+              <td>数理</td>
+              <td></td>
+              <td style="color: red">4</td>
+            </tr>
+            <tr>
+              <td>吴天昊</td>
+              <td>电气</td>
+              <td></td>
+              <td style="color: red">3</td>
+            </tr>
+            <tr>
               <tr>
                 <td>高泽阳</td>
                 <td>能动</td>
@@ -162,12 +174,7 @@
                 <td></td>
                 <td>0</td>
               </tr>
-              <tr>
-                <td>张凤山</td>
-                <td>数理</td>
-                <td></td>
-                <td>0</td>
-              </tr>
+
               <tr>
                 <td>尧甜</td>
                 <td>数理</td>
